buildscript {
    repositories {
        maven { url = 'https://maven.firstdark.dev/releases' }
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath 'com.hypherionmc.modutils:modpublisher:2.2.1'
    }
}

plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.1.21'
}

apply plugin: 'com.hypherionmc.modutils.modpublisher'

if (project.file('../gradletools.gradle').exists()) {
    apply from: '../gradletools.gradle'
} else if (project.file('gradletools.gradle').exists()) {
    apply from: 'gradletools.gradle'
} else {
    apply from: 'https://raw.githubusercontent.com/McJtyMods/MultiWorkspace/1.21_neo/gradletools.gradle'
}

group = "com.github.mcjty"
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

if (System.getenv('BUILD_NUMBER') != null) {
    version += "-${System.getenv('BUILD_NUMBER')}"
}

repos()
at()
runs()
jars()

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

dependencies {
    mc()
//    jei()
//    top()
}

modpublisher(['the-one-probe'], [], ['the-one-probe'], [], [])

task apiJar(type: Jar) {
    archiveClassifier = "api"
    from(sourceSets.main.output) {
        include "mcjty/lostcities/api/**"
    }
}

artifacts {
    archives apiJar
}

publishing {
    publications.create('mavenJava', MavenPublication) {
        from components.java
        artifact apiJar

        artifactId = "lostcities"
        pom {
            name = 'LostCities'
            description = 'Lost Cities'
            scm {
                url = 'https://github.com/McJtyMods/LostCities'
                connection = 'scm:git:git@github.com:McJtyMods/LostCities.git'
                developerConnection = 'scm:git:git@github.com:McJtyMods/LostCities.git'
            }
            issueManagement {
                system = 'github'
                url = 'https://github.com/McJtyMods/LostCities/issues'
            }
            licenses {
                license {
                    name = 'MIT'
                    distribution = 'repo'
                }
            }
            developers {
                developer {
                    id = 'McJty'
                    name = 'McJty'
                    roles = ['developer']
                }
            }
        }
    }
    repositories {
        if (System.getenv('local_maven') != null) {
            maven {
                name = 'local'
                url = 'file://' + System.getenv('local_maven')
            }
        }
    }
}
